test/errors/align1.rcasm
    add a
!align 13
    add d